Prevent page header from getting too wide

--- a/styles/pup/components/_page-header.scss
+++ b/styles/pup/components/_page-header.scss
@@ -3,6 +3,7 @@ $page-header-spacing: spacing(1);
 .page-header {
   margin-bottom: $page-header-spacing;
   margin-top: $page-header-spacing;
+  max-width: $measure-wide;
 }
 
 .page-header__title {
